--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,4 +73,14 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  @variants responsive {
+    body {
+      background: red;
+    }
+    /* Hide scrollbar for Chrome, Safari, and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+  }
 }
